# Medical-AI-Assistant

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LLM_training_guide_validation.md  MASTER_EXECUTION_PLAN.md  Project_Architecture_Document.md  Project_Requirements_Document.md  README.md  application_logic_diagram_report.md  deploy_url.txt  docker_training.md  project_understanding.md  requirements.txt  run_repro.sh  train.py  training_smoke_run.md  user_interaction_diagram_report.md  workspace.json
.github/: PULL_REQUEST_TEMPLATE.md
.memory/: todo_meta.json
Medical-AI-Assistant/: .env.example  CODE_OF_CONDUCT.md  README.md
SUB_PLANS/: 01_Backend_Development_Plan.md
backend/: pyproject.toml
backend/app/: database.py  dependencies.py  main.py
backend/app/agent/: par_generator.py
backend/app/agent/callbacks/: __init__.py  audit_callback.py  safety_callback.py
backend/app/agent/safety/: content_filter.py
backend/app/agent/tools/: __init__.py  rag_retrieval.py  red_flag_detector.py
backend/app/api/: auth.py  sessions.py
backend/app/auth/: password.py  permissions.py
backend/app/models/: __init__.py  audit_log.py  message.py  par.py  safety_filter_log.py  session.py  user.py
backend/app/prompts/: safety_prompt.txt  system_prompt.txt
backend/app/rag/: config.py  ingestion.py  retriever.py  vector_store.py
backend/app/schemas/: session.py  user.py
backend/app/services/: __init__.py  par_service.py  session_service.py
backend/app/websocket/: handlers.py
backend/data/guidelines/: consent_privacy.md  general_triage.md  red_flags.md
backend/scripts/: ingest_guidelines.py
backend/serving/optimization/: __init__.py  batch_optimization.py  config.py  memory_optimization.py  validation.py
branding/: README.md  brand-strategy.md  customer-success-case-studies.md  implementation-roadmap.md  industry-awards-strategy.md  pr-media-strategy.md  social-proof-market-validation.md  speaking-conference-strategy.md  thought-leadership-platform.md
demo/: DEMO_ARCHITECTURE.md  FINAL_STATUS.md  README.md  requirements.txt  setup_demo.sh
deployment/: DEPLOYMENT_SUMMARY.md  README.md  production-config.env
docker/: .dockerignore  Dockerfile.backend  Dockerfile.demo  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml
docs/: README.md  application_logic_analysis.md  architecture_overview.md  codebase_analysis.md  copilot-1-pipeline-validation-plan.md  deployment_architecture.md  links.md  phase7-completion-index.md  prompts.md  readme_content_analysis.md  readme_structure.md  user_interaction_analysis.md
frontend/: mock_backend.py  package.json  vite.config.ts
global/: README.md
(+1051 files in other folders)
